# iptv

./: .gitignore  AGENTS.md  MOBILE_ENHANCEMENTS.md  README.md  TODO.md  app.json  mobile_app_plan.md  opencode.json  package.json  pnpm-lock.yaml  refactor-guidance.md  todo.md  turbo.json
apps/api/: enhancements_plan.md  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/api/lib/: router.ts  trpc.ts
apps/api/services/: categoryService.ts  channelService.test.ts  channelService.ts  movieService.ts  playlistUpdateService.ts  seriesService.ts  userService.ts
apps/api/utils/: cleanName.test.ts  cleanName.ts  types.ts  xtream.ts
apps/backend/: .gitignore  drizzle.config.ts  package.json  pnpm-lock.yaml
apps/backend/api/: index.ts
apps/backend/src/: AppFactory.ts  app.context.ts  app.module.ts  app.service.ts  main.ts
apps/mobile/: app.json  eas.json  package.json  temp.js  tsconfig.json
apps/mobile/.expo-shared/: assets.json
apps/mobile/app/: _layout.tsx  search.tsx  settings.tsx
apps/mobile/components/: ChannelRow.tsx  Header.tsx  LiveScores.tsx  PlaylistForm.tsx  PlaylistSetup.tsx
apps/mobile/hooks/: useHudOpacity.ts  (+4 more)
apps/web/: CODING_STYLE.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  plan.md  prettier.config.js  todo.md  tsconfig.json
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src-tauri/src/commands/: sync.rs
apps/web/src-tauri/src/services/: sync.rs
(+304 files in other folders)
